Fixed more typos

--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -147,7 +147,7 @@ either stay sticky to the top of the browser or scroll away.
 
 ### Responsive behavior
 
-In smaller broswer windows, `menu items` in the header should collapse into the
+In smaller browser windows, `menu items` in the header should collapse into the
 left side nav menu. Items that were once in the header should stack at the top
 of the side nav panel if other items were already present in the panel.
 
