--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -29,7 +29,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 <Row>
 <Column colLg={12}>
 
-![accordion interactives states](images/accordion-style-2.png)
+![accordion interactive states](images/accordion-style-2.png)
 
 </Column>
 </Row>
