--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -384,7 +384,7 @@ accessibility in data visualizations and the same logic should apply here.
 By default the container’s width is set to the size of the text label with 64px
 fixed padding on the right side and 16px fixed padding on the left. However,
 when possible set the button container’s relative position to the responsive
-layout grid and match buttton width to the other elements on the page. Ideally,
+layout grid and match button width to the other elements on the page. Ideally,
 when using groups of related buttons (not including ghost buttons), they should
 all be the same width. See [button groups](#Button-groups) below for more
 detailed information.
