--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -303,7 +303,7 @@ horizontal scroll.
 <Row>
 <Column colLg={8}>
 
-![Single line code snippet with overfow text](images/code-snippet-usage-6b.png)
+![Single line code snippet with overflow text](images/code-snippet-usage-6b.png)
 
 </Column>
 </Row>
@@ -315,7 +315,7 @@ Use multi-line code snippets for displaying multiple lines of code.
 <Row>
 <Column colLg={12}>
 
-![Multi-line code snippet with overfow text](images/code-snippet-usage-7a.png)
+![Multi-line code snippet with overflow text](images/code-snippet-usage-7a.png)
 
 </Column>
 </Row>
