--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -115,7 +115,7 @@ binary decision.
 
 #### Height
 
-There are three height sizes for the content swithcer: small (32px), default
+There are three height sizes for the content switcher: small (32px), default
 (40px), and large (48px). Choose a size that best fits the density of your
 layout or the prominence of the switcher.
 
