--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -173,7 +173,7 @@ small toolbar is paired with the short and compact row sizes.
 
 </div>
 
-<Caption>Structure and spacing measurements for toolar | px/rem</Caption>
+<Caption>Structure and spacing measurements for toolbar | px/rem</Caption>
 
 ### Batch action bar
 
