--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -102,7 +102,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Hover    | Field               | background-color | `$hover-ui`          |
 |          | Menu option         | background-color | `$hover-ui`          |
 |          | Menu option         | text color       | `$text-01`           |
-|          | Menuo option: light | background-color | `$hover-light-ui`    |
+|          | Menu option: light  | background-color | `$hover-light-ui`    |
 | Active   | Menu option         | background-color | `$selected-ui`       |
 |          | Menu option: light  | background-color | `$selected-light-ui` |
 | Selected | Menu option         | background-color | `$selected-ui`       |
