--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -175,7 +175,7 @@ conveys the “next step” intention.
 
 ![Primary button alignment in a wizard](images/form-usage-7.png)
 
-<Caption>Single button aligment in a wizard</Caption>
+<Caption>Single button alignment in a wizard</Caption>
 
 </Column>
 </Row>
@@ -183,7 +183,7 @@ conveys the “next step” intention.
 <Row>
 <Column colLg={8}>
 
-![Primary button aligment in a wizard](images/form-usage-8.png)
+![Primary button alignment in a wizard](images/form-usage-8.png)
 
 <Caption>Secondary / Primary button pair alignment in a wizard</Caption>
 
