--- a/src/pages/components/list/style.mdx
+++ b/src/pages/components/list/style.mdx
@@ -14,7 +14,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 <Row>
 <Column colLg={8}>
 
-![Example of ordered and undordered lists](images/list-style-1.png)
+![Example of ordered and unordered lists](images/list-style-1.png)
 
 </Column>
 </Row>
