--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -70,7 +70,7 @@ labels concise and to the point. Modal labels are optional.
 Modals that are 36% width and larger have a `margin-right: 20%` (margin
 percentage is based off the width of the modal window). If the modal is smaller
 than 36% then it has a fixed `margin-right: 16px/1rem`. Body copy, including
-titles, in a modal alway follows the 20% margin-right rule. However, inputs and
+titles, in a modal always follows the 20% margin-right rule. However, inputs and
 other components may still expand to the full width of a modal window.
 
 <div className="image--fixed">
