--- a/src/pages/components/tag/style.mdx
+++ b/src/pages/components/tag/style.mdx
@@ -36,7 +36,7 @@ amount of content. All four corners of a tag are rounded with a 24px radius.
 
 <div className="image--fixed">
 
-![Structure and spacing measurementst](images/tag-style-1.png)
+![Structure and spacing measurements](images/tag-style-1.png)
 
 </div>
 
