--- a/src/pages/data-visualization/axes-and-labels/index.mdx
+++ b/src/pages/data-visualization/axes-and-labels/index.mdx
@@ -43,12 +43,12 @@ making a small difference look big and significant.
 <DoDontRow>
 <DoDont caption="For bar charts, the numerical axis should start at zero.">
 
-![Legends bahvior highlight on hover](images/axislabel-zero-a.png)
+![Legends behavior highlight on hover](images/axislabel-zero-a.png)
 
 </DoDont>
 <DoDont type="dont" caption="When an axis starts at non-zero, percentage differences between bars are exaggerated.">
 
-![Legends bahvior highlight on hover](images/axislabel-zero-b.png)
+![Legends behavior highlight on hover](images/axislabel-zero-b.png)
 
 </DoDont>
 </DoDontRow>
