--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -127,33 +127,33 @@ well-balanced cohesive experience.
 
 </ImageGalleryImage>
 
-<ImageGalleryImage col={6} title="Donut chart in action" alt="exmaple of a donut chart">
+<ImageGalleryImage col={6} title="Donut chart in action" alt="example of a donut chart">
 
-![exmaple of a donut chart](images/color_gallery_3.png)
-
-</ImageGalleryImage>
-
-<ImageGalleryImage col={6} title="Stream chart in action" alt="exmaple of a stream chart">
-
-![exmaple of a stream chart](images/color_gallery_4.png)
+![example of a donut chart](images/color_gallery_3.png)
 
 </ImageGalleryImage>
 
-<ImageGalleryImage col={12} title="Heat map in action" alt="exmaple of a heat map">
+<ImageGalleryImage col={6} title="Stream chart in action" alt="example of a stream chart">
 
-![exmaple of a heat map](images/color_gallery_5.png)
-
-</ImageGalleryImage>
-
-<ImageGalleryImage col={12} title="Proportional diagram in action" alt="exmaple of a proportional diagram">
-
-![exmaple of a proportional diagram](images/color_gallery_6.png)
+![example of a stream chart](images/color_gallery_4.png)
 
 </ImageGalleryImage>
 
-<ImageGalleryImage col={12} title="Alluvial diagram in action" alt="exmaple of an alluvial diagram">
+<ImageGalleryImage col={12} title="Heat map in action" alt="example of a heat map">
 
-![exmaple of an alluvial diagram](images/color_gallery_7.png)
+![example of a heat map](images/color_gallery_5.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Proportional diagram in action" alt="example of a proportional diagram">
+
+![example of a proportional diagram](images/color_gallery_6.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Alluvial diagram in action" alt="example of an alluvial diagram">
+
+![example of an alluvial diagram](images/color_gallery_7.png)
 
 </ImageGalleryImage>
 </ImageGallery>
