--- a/src/pages/data-visualization/legends/index.mdx
+++ b/src/pages/data-visualization/legends/index.mdx
@@ -55,7 +55,7 @@ titles and axis labels.
 </Column>
 <Column  colLg={6} colMd={4} colSm={4}>
 
-![Legends bahvior highlight on hover](images/legends-usage-2.png)
+![Legends behavior highlight on hover](images/legends-usage-2.png)
 
 <Caption>
   In-chart labels are ideal for charts with predictable data and ample empty
@@ -75,7 +75,7 @@ chart accessible for users with visual impairment.
 <Row>
 <Column  colLg={6} colMd={4} colSm={4}>
 
-![Legends bahvior highlight on hover](images/legends-usage-3.png)
+![Legends behavior highlight on hover](images/legends-usage-3.png)
 
 <Caption>
   Texture can improve accessibility. See the accessibility page for all approved
@@ -100,12 +100,12 @@ scarce, such as a dashboard.
 <Row>
 <Column  colLg={6} colMd={4} colSm={4}>
 
-![Legends bahvior highlight on hover](images/legends-pos-1.png)
+![Legends behavior highlight on hover](images/legends-pos-1.png)
 
 </Column>
 <Column  colLg={6} colMd={4} colSm={4}>
 
-![Legends bahvior highlight on hover](images/legends-pos-2.png)
+![Legends behavior highlight on hover](images/legends-pos-2.png)
 
 </Column>
 </Row>
@@ -120,9 +120,9 @@ clustered.
 <Column  colLg={8} colMd={6} colSm={4}>
 <ArtDirection>
 
-![Legends bahvior highlight on hover](images/legends-pos-4sm.png)
-![Legends bahvior highlight on hover](images/legends-pos-4.png)
-![Legends bahvior highlight on hover](images/legends-pos-4.png)
+![Legends behavior highlight on hover](images/legends-pos-4sm.png)
+![Legends behavior highlight on hover](images/legends-pos-4.png)
+![Legends behavior highlight on hover](images/legends-pos-4.png)
 
 </ArtDirection>
 </Column>
