--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -280,7 +280,7 @@ variations and states of that component.
 - To add the whole component, select the desired variant and place it on your
   artboard.
 
-- For even more configurablility, use the individual building blocks found under
+- For even more configurability, use the individual building blocks found under
   the `Items` folder within the symbol. Be sure your custom design adheres to
   our [design guidelines](/guidelines/accessibility/overview).
 
