--- a/src/pages/developing/angular-tutorial/step-1.mdx
+++ b/src/pages/developing/angular-tutorial/step-1.mdx
@@ -838,7 +838,7 @@ Then we need to add the template code. Populate `header.component.html` with:
 ```
 <!-- prettier-ignore-end -->
 
-Next import the header compoenent in `app.component.spec.ts` and add the
+Next import the header component in `app.component.spec.ts` and add the
 component in `app.component.html`
 
 <!-- prettier-ignore-start -->
