--- a/src/pages/developing/angular-tutorial/step-3.mdx
+++ b/src/pages/developing/angular-tutorial/step-3.mdx
@@ -254,7 +254,7 @@ to get access to the Apollo service.
 constructor(private apollo: Apollo) { }
 ```
 
-Next, we will fetch the data in `ngOnInit()`. Add the folowing code right below
+Next, we will fetch the data in `ngOnInit()`. Add the following code right below
 the `model.header` declaration:
 
 ```graphql path=src/app/repositories/repo-table/repo-table.component.ts
