--- a/src/pages/developing/frameworks/other-frameworks.mdx
+++ b/src/pages/developing/frameworks/other-frameworks.mdx
@@ -89,6 +89,6 @@ future. We added Angular support in the summer of 2018 and Vue in early 2019.
 For the Carbon Design System to incorporate additional frameworks into our core
 offering, those frameworks need clear, guaranteed, ongoing resources to maintain
 and support that option. If a team built a product using a native web components
-implemenation of Carbon, for example, but had no plan to support that solution
+implementation of Carbon, for example, but had no plan to support that solution
 outside of their product, that couldn't become a core part of the Carbon Design
 System.
