--- a/src/pages/developing/vue-tutorial/step-2.mdx
+++ b/src/pages/developing/vue-tutorial/step-2.mdx
@@ -407,7 +407,7 @@ we can use Carbon breakpoints, tokens, and typography Sass mixins and functions:
 @import 'carbon-components/scss/globals/scss/vars.scss';
 ```
 
-Adding these tokesn, mixins etc. here means we can import them with a single
+Adding these tokens, mixins etc. here means we can import them with a single
 line into any component that needs them.
 
 ### Banner
@@ -539,7 +539,7 @@ units.
 }
 ```
 
-We also need to adust our vertical spacing and type treatment. Like before, it's
+We also need to adjust our vertical spacing and type treatment. Like before, it's
 a matter of using spacing and type tokens like so:
 
 <Row>
