--- a/src/pages/developing/vue-tutorial/step-3.mdx
+++ b/src/pages/developing/vue-tutorial/step-3.mdx
@@ -411,7 +411,7 @@ with
 
 Here in order to switch between the standard rendering of a data cell we've
 wrapped our standard `{{cell}}` rendering in a template tag. The template tag is
-non-rendering so it will dissapear, leaving us with the same content as before.
+non-rendering so it will disappear, leaving us with the same content as before.
 
 Using the v-if and v-else directives we switch based on the contents of the cell
 between the standard rendering and the LinkList component.
