--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -36,7 +36,7 @@ design.
 ![Usage Example](images/13_Usage_0.svg)
 
 <DoDontRow>
-<DoDont caption="Do treat pictograms as illustations and provide proper clearance">
+<DoDont caption="Do treat pictograms as illustrations and provide proper clearance">
 
 ![Do give proper space](images/13_Usage_1_do.svg)
 
