--- a/src/pages/patterns/dialog-pattern/index.mdx
+++ b/src/pages/patterns/dialog-pattern/index.mdx
@@ -2,7 +2,7 @@
 title: Dialogs
 description:
   A dialog is a “conversation” between the system and the user. It is prompted
-  when the sytem needs input from the user or to give the user urgent
+  when the system needs input from the user or to give the user urgent
   information concerning their current workflow.
 ---
 
