--- a/src/pages/patterns/search-pattern/index.mdx
+++ b/src/pages/patterns/search-pattern/index.mdx
@@ -266,7 +266,7 @@ search.
 
 | When to use                          |                                                                                                                                                                                                                                                                   |
 | ------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| _When searching is expensive_        | Searching a large body of information can be resource intensive and expensive, expecially in instances where many users are searching the information simultaneously. Actively running the search after every character is entered or removed can be impractical. |
+| _When searching is expensive_        | Searching a large body of information can be resource intensive and expensive, especially in instances where many users are searching the information simultaneously. Actively running the search after every character is entered or removed can be impractical. |
 | _When searching is slow_             | If the body of information is massive, actively searching can become too slow to be practical. Extended processing time following each character entered results in an application or website seeming unresponsive.                                               |
 | _When the information is unfamiliar_ | When users are searching an application or website they’re unfamiliar with, a dedicated search results page can give them a better idea of data structure and available resources.                                                                                |
 
