--- a/src/pages/community/patterns/remove-pattern/index.mdx
+++ b/src/pages/community/patterns/remove-pattern/index.mdx
@@ -33,7 +33,7 @@ common type of removal and is destructive.
 
 | Action | Variation       | Description                                                                                                               |
 | ------ | --------------- | ------------------------------------------------------------------------------------------------------------------------- |
-| Delete | _High impact_   | Action can't be reversed and causes significant loss. The user types the resource name into the modal to confim deletion. |
+| Delete | _High impact_   | Action can't be reversed and causes significant loss. The user types the resource name into the modal to confirm deletion. |
 |        | _Medium impact_ | Action can't be reversed and causes some loss. The user sees a modal and confirms the consequence of deletion.            |
 |        | _Low impact_    | Action is reversible or very low impact. A confirmation modal may not be required.                                        |
 | Remove | _Medium impact_ | Action can't be reversed and causes some loss. The user sees a modal and confirms the consequence of removal.             |
