--- a/src/pages/developing/angular-tutorial/step-4.mdx
+++ b/src/pages/developing/angular-tutorial/step-4.mdx
@@ -105,7 +105,7 @@ You should see something similar to where the
 Here's what we're building – an informational section that has a heading and
 three subheadings. Each subheading has accompanying copy and a pictogram. We'll
 assume that this informational section is used elsewhere on the site, meaning
-it's a great opportunity to build it as a resusable component. As for naming,
+it's a great opportunity to build it as a reusable component. As for naming,
 we'll call it an `InfoSection` with three `InfoCard`s as children.
 
 ![Info section layout](../shared/step-4/images/info-layout.png)
@@ -605,7 +605,7 @@ export class InfoCardComponent implements OnInit {
 ```
 <!-- prettier-ignore-end -->
 
-This'll allow us to still accept `heading` as an input to the component, but
+This will allow us to still accept `heading` as an input to the component, but
 we'll need to change the template to use `splitHeading` rather than `heading` to
 display our heading content.
 
