docs: fix npm command for running serve script

--- a/src/pages/developing/frameworks/vue.mdx
+++ b/src/pages/developing/frameworks/vue.mdx
@@ -149,7 +149,7 @@ yarn serve
 Or npm
 
 ```bash
-npm serve
+npm run serve
 ```
 
 _Note: This isn't the only way to bootstrap a_ `carbon-components-vue`
