Fixing URLs to point to new accessibility requirements checklist

--- a/src/pages/components/file-uploader/accessibility.mdx
+++ b/src/pages/components/file-uploader/accessibility.mdx
@@ -44,16 +44,16 @@ be updated when these accessibility issues are resolved.
 ## Resources
 
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [1.4.13 Content on Hover or Focus](https://www.ibm.com/able/guidelines/ci162/no_keyboard_trap.html)
+  - [1.4.13 Content on Hover or Focus](https://www.ibm.com/able/requirements/requirements/#1_4_13)
     (WCAG Success Criteria
     [1.4.13](https://www.w3.org/WAI/WCAG21/Understanding/content-on-hover-or-focus.html))
-  - [2.1.2 No Keyboard Traps](https://www.ibm.com/able/guidelines/ci162/no_keyboard_trap.html)
+  - [2.1.2 No Keyboard Traps](https://www.ibm.com/able/requirements/requirements/#2_1_2)
     (WCAG Success Criteria
     [2.1.2](https://www.w3.org/TR/UNDERSTANDING-WCAG20/keyboard-operation-trapping.html))
-  - [2.4.3 Focus Order](https://www.ibm.com/able/guidelines/ci162/link_purpose.html)
+  - [2.4.3 Focus Order](https://www.ibm.com/able/requirements/requirements/#2_4_3)
     (WCAG Success Criteria
     [2.4.3](https://www.w3.org/WAI/WCAG21/Understanding/focus-order))
-  - [3.2.2 On Input](https://www.ibm.com/able/guidelines/ci162/on_input.html)
+  - [3.2.2 On Input](https://www.ibm.com/able/requirements/requirements/#3_2_2)
     (WCAG Success Criteria
     [3.2.2](https://www.w3.org/TR/2016/NOTE-UNDERSTANDING-WCAG20-20161007/consistent-behavior-unpredictable-change.html))
 
