--- a/src/pages/components/link/accessibility.mdx
+++ b/src/pages/components/link/accessibility.mdx
@@ -58,7 +58,7 @@ content to this component.
 - [W3C WAI-ARIA Authoring Practices Link Design Pattern](https://www.w3.org/TR/wai-aria-practices/#link)
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
-- [IBM Accessibility Checklist - Checkpoint 2.4.4 Link Purpose (In Context)](https://www.ibm.com/able/guidelines/ci162/link_purpose.html)(WCAG
+- [IBM Accessibility Checklist - Checkpoint 2.4.4 Link Purpose (In Context)](https://www.ibm.com/able/requirements/requirements/#2_4_4)(WCAG
   Success Criteria
   [2.4.4](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-refs.html))
 
