--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -121,7 +121,7 @@ Links need to be clear enough to be understood by the user, but should not be so
 long that the text wraps unless used inline.
 
 For further content guidance, see IBM Accessibility on
-[link purpose](https://www.ibm.com/able/guidelines/ci162/link_purpose.html).
+[link purpose](https://www.ibm.com/able/requirements/requirements/#2_4_4).
 
 ## Behaviors
 
