--- a/src/pages/components/loading/accessibility.mdx
+++ b/src/pages/components/loading/accessibility.mdx
@@ -45,7 +45,7 @@ content to this component.
 
 #### Helpful resources for creating customized accessible implementations
 
-- [IBM Accessibility Checklist - Checkpoint 4.1.3 Status Message](https://www.ibm.com/able/guidelines/ci162/status_messages_71.html)
+- [IBM Accessibility Checklist - Checkpoint 4.1.3 Status Message](https://www.ibm.com/able/requirements/requirements/#4_1_3)
   (WCAG Success Criteria
   [4.1.3](https://www.w3.org/WAI/WCAG21/Understanding/status-messages.html))
 
