--- a/src/pages/components/notification/accessibility.mdx
+++ b/src/pages/components/notification/accessibility.mdx
@@ -64,13 +64,13 @@ key is used to move focus to the close button within the notification and the
 - [W3C W3C Web Accessibility Tutorial - User Notifications](https://www.w3.org/WAI/tutorials/forms/notifications/)
   provides a tutorial on notification accessibility.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [3.3.1 Error Identification](https://www.ibm.com/able/guidelines/ci162/error_id.html)
+  - [3.3.1 Error Identification](https://www.ibm.com/able/requirements/requirements/#3_3_1)
     (WCAG Success Criteria
     [3.3.1](https://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-identified.html))
-  - [3.3.2 Labels and Instructions](https://www.ibm.com/able/guidelines/ci162/labels_or_instructions.html)
+  - [3.3.2 Labels and Instructions](https://www.ibm.com/able/requirements/requirements/#3_3_2)
     (WCAG Success Criteria
     [3.3.2](https://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-cues.html))
-  - [3.3.3 Error Suggestion](https://www.ibm.com/able/guidelines/ci162/error_suggestion.html)
+  - [3.3.3 Error Suggestion](https://www.ibm.com/able/requirements/requirements/#3_3_3)
     (WCAG Success Criteria
     [3.3.3](https://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-suggestions.html))
 
