--- a/src/pages/components/radio-button/accessibility.mdx
+++ b/src/pages/components/radio-button/accessibility.mdx
@@ -47,9 +47,9 @@ keyboard focus placing the element in the logical navigation flow.
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard intractions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [2.4.3 Focus Order](https://www.ibm.com/able/guidelines/ci162/focus_order.html)
+  - [2.4.3 Focus Order](https://www.ibm.com/able/requirements/requirements/#2_4_3)
     (WCAG Success Criteria 2.4.3)
-  - [2.4.7 Focus Visible](https://www.ibm.com/able/guidelines/ci162/focus_visible.html)
+  - [2.4.7 Focus Visible](https://www.ibm.com/able/requirements/requirements/#2_4_7)
     (WCAG Success Criteria 2.4.7)
 
 ## Accessibility testing
