--- a/src/pages/guidelines/accessibility/color.mdx
+++ b/src/pages/guidelines/accessibility/color.mdx
@@ -59,7 +59,7 @@ moving independently of each other.
 
 Visual information used to indicate states and boundaries of UI components must
 have a contrast ratio of 3:1 against adjacent colors. See
-[IBM checkpoint 1.4.11 Non-text Contrast](https://www.ibm.com/able/guidelines/ci162/non-text_contrast_71.html).
+[IBM checkpoint 1.4.11 Non-text Contrast](https://www.ibm.com/able/requirements/requirements/#1_4_11).
 
 <!-- To view best practices for using color in data visualization, view the [Data Vis color](/data-visualization/overview/colors) page. -->
 
