--- a/src/pages/guidelines/accessibility/keyboard.mdx
+++ b/src/pages/guidelines/accessibility/keyboard.mdx
@@ -28,7 +28,7 @@ activate an in-focus element.
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Checkpoint 2.1.1 Keyboard"
-    href="https://www.ibm.com/able/guidelines/ci162/keyboard.html"
+    href="https://www.ibm.com/able/requirements/requirements/#2_1_1"
     >
 
 ![IBM bee icon](images/bee.svg)
@@ -48,7 +48,7 @@ element is in focus, it can be further activated using the keyboard.
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Checkpoint 2.4.7 Focus Visible"
-    href="https://www.ibm.com/able/guidelines/ci162/focus_visible.html"
+    href="https://www.ibm.com/able/requirements/requirements/#2_4_7"
     >
 
 ![IBM bee icon](images/bee.svg)
@@ -76,7 +76,7 @@ instead of solely defining the look and feel of an element. Enhance with ARIA
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Checkpoint 2.4.3 Focus Order"
-    href="https://www.ibm.com/able/guidelines/ci162/focus_order.html"
+    href="https://www.ibm.com/able/requirements/requirements/#2_4_3"
     >
 
 ![IBM bee icon](images/bee.svg)
@@ -95,7 +95,7 @@ users can then quickly jump to any area they want.
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Checkpoint 1.3.1 Info and Relationships"
-    href="https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html"
+    href="https://www.ibm.com/able/requirements/requirements/#1_3_1"
     >
 
 ![IBM bee icon](images/bee.svg)
