--- a/src/pages/components/dropdown/accessibility.mdx
+++ b/src/pages/components/dropdown/accessibility.mdx
@@ -50,13 +50,13 @@ be updated when these accessibility issues are resolved.
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [2.4.7 Focus Visible](https://www.ibm.com/able/guidelines/ci162/focus_visible.html)
+  - [2.4.7 Focus Visible](https://www.ibm.com/able/requirements/requirements/#2_4_7)
     (WCAG Success Criteria
     [2.4.7](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-visible.html))
-  - [3.2.2 On Input](https://www.ibm.com/able/guidelines/ci162/on_input.html)
+  - [3.2.2 On Input](https://www.ibm.com/able/requirements/requirements/#3_2_2)
     (WCAG Success Criteria
     [3.2.2](https://www.w3.org/TR/2016/NOTE-UNDERSTANDING-WCAG20-20161007/consistent-behavior-unpredictable-change.html))
-  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/guidelines/ci162/name_role_value.html)
+  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/requirements/requirements/#4_1_2)
     (WCAG Success Criteria
     [4.1.2](https://www.w3.org/WAI/WCAG21/Understanding/name-role-value))
 
