--- a/src/pages/components/form/accessibility.mdx
+++ b/src/pages/components/form/accessibility.mdx
@@ -60,19 +60,19 @@ content to this component.
 - [W3C Web Tutorial: Labeling Controls](https://www.w3.org/WAI/tutorials/forms/labels/).
 - [W3C Web Tutorial: Form Instructions](https://www.w3.org/WAI/tutorials/forms/instructions/).
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [1.3.1 Info and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
+  - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
-  - [3.3.1 Error Identification](https://www.ibm.com/able/guidelines/ci162/error_id.html)
+  - [3.3.1 Error Identification](https://www.ibm.com/able/requirements/requirements/#3_3_1)
     (WCAG Success Criteria
     [3.3.1](http://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-identified.html))
-  - [3.3.2 Labels and Instructions](https://www.ibm.com/able/guidelines/ci162/labels_or_instructions.html)
+  - [3.3.2 Labels and Instructions](https://www.ibm.com/able/requirements/requirements/#3_3_2)
     (WCAG Success Criteria
     [3.3.2](https://www.w3.org/WAI/WCAG21/Understanding/labels-or-instructions.html))
-  - [3.3.3 Error Suggestion](https://www.ibm.com/able/guidelines/ci162/error_suggestion.html)
+  - [3.3.3 Error Suggestion](https://www.ibm.com/able/requirements/requirements/#3_3_3)
     (WCAG Success Criteria
     [3.3.3](https://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-suggestions.html))
-  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/guidelines/ci162/name_role_value.html)
+  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/requirements/requirements/#4_1_2)
     (WCAG Success Criteria
     [4.1.2](https://www.w3.org/TR/UNDERSTANDING-WCAG20/ensure-compat-rsv.html))
 
