--- a/src/pages/components/list/accessibility.mdx
+++ b/src/pages/components/list/accessibility.mdx
@@ -52,7 +52,7 @@ content to this component.
 
 - [W3C Content Structure tutorial](https://www.w3.org/WAI/tutorials/page-structure/content/)
   covers the usage of lists.
-- [IBM Accessibility Checklist - Checkpoint 1.3.1 Info and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
+- [IBM Accessibility Checklist - Checkpoint 1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
   (WCAG Technique [H48](https://www.w3.org/WAI/WCAG21/Techniques/html/H48))
 
 ## Accessibility testing
