--- a/src/pages/components/select/accessibility.mdx
+++ b/src/pages/components/select/accessibility.mdx
@@ -55,16 +55,16 @@ content to this component.
 ## Resources
 
 - [IBM Accessibility Checklist Checkpoint:](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html)
-  - [1.3.1 Information and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
+  - [1.3.1 Information and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
-  - [3.2.2 On Input](https://www.ibm.com/able/guidelines/ci162/on_input.html)
+  - [3.2.2 On Input](https://www.ibm.com/able/requirements/requirements/#3_2_2)
     (WCAG Success Criteria
     [3.2.2](http://www.w3.org/TR/2008/REC-WCAG20-20081211/#content-structure-separation-programmatic))
-  - [3.3.1 Error Identification](https://www.ibm.com/able/guidelines/ci162/error_id.html)
+  - [3.3.1 Error Identification](https://www.ibm.com/able/requirements/requirements/#3_3_1)
     (WCAG Success Criteria
     [3.3.1](https://www.w3.org/WAI/WCAG21/Understanding/error-identification))
-  - [3.3.2 Labels or Instructions](https://www.ibm.com/able/guidelines/ci162/labels_or_instructions.html)
+  - [3.3.2 Labels or Instructions](https://www.ibm.com/able/requirements/requirements/#3_3_2)
     (WCAG Success Criteria
     [3.3.2](http://www.w3.org/TR/2008/REC-WCAG20-20081211/#minimize-error-cues))
 
