--- a/src/pages/components/tabs/accessibility.mdx
+++ b/src/pages/components/tabs/accessibility.mdx
@@ -48,10 +48,10 @@ be updated when these accessibility issues are resolved.
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [1.3.1 Info and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
+  - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
-  - [1.3.2 Meaningful Sequence](https://www.ibm.com/able/guidelines/ci162/meaningful_sequence.html)
+  - [1.3.2 Meaningful Sequence](https://www.ibm.com/able/requirements/requirements/#1_3_2)
     (WCAG Success Criteria
     [1.3.2](https://www.w3.org/WAI/WCAG21/Understanding/meaningful-sequence))
 
