--- a/src/pages/components/toggle/accessibility.mdx
+++ b/src/pages/components/toggle/accessibility.mdx
@@ -60,16 +60,16 @@ content to this component.
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint:](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html)
-  - [1.3.1 Info and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
+  - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
-  - [2.4.6 Headings and Labels](https://www.ibm.com/able/guidelines/ci162/headings_and_labels.html)
+  - [2.4.6 Headings and Labels](https://www.ibm.com/able/requirements/requirements/#2_4_6)
     (WCAG Success Criteria
     [2.4.6](https://www.w3.org/WAI/WCAG21/Understanding/headings-and-labels))
-  - [3.2.2 On Input](https://www.ibm.com/able/guidelines/ci162/on_input.html)
+  - [3.2.2 On Input](https://www.ibm.com/able/requirements/requirements/#3_2_2)
     (WCAG Success Criteria
     [3.2.2](https://www.w3.org/WAI/WCAG21/Understanding/on-input))
-  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/guidelines/ci162/name_role_value.html)
+  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/requirements/requirements/#4_1_2)
     (WCAG Success Criteria
     [4.1.2](https://www.w3.org/TR/UNDERSTANDING-WCAG20/ensure-compat-rsv.html))
 
