[docs] update button link for weekly playbacks
Meetups page:
- Updated the tertiary button to say `Enroll` for the Weekly Playbacks section.
- Linked tertiary button to our YL event page for people to directly enroll to get meeting invites.

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -39,8 +39,8 @@ along to see other work in progress and learn that way.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
-  Email us
+  onClick={() => (https://ec.yourlearning.ibm.com/w3/meeting/10154096)}>
+  Enroll
 </Button>
 
 </Column>
