--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -330,17 +330,14 @@ the [accessibility tab](https://www.carbondesignsystem.com/components/radio-but
 
 #### Screenreader
 
-VoiceOver: Users can trigger a state change by
-pressing `Control-Option-Space` or `Space` while the radio button input has
-screen reader focus.
+VoiceOver: Users can navigate between radio buttons by pressing the `Up` and `Down`
+arrow keys.
 
 JAWS: Users can navigate between radio buttons by pressing the `Up` and `Down`
-arrow keys. Users can trigger a state change by pressing `Space` while the radio
-button input has screen reader focus.
+arrow keys.
 
 NVDA: Users can navigate between radio buttons by pressing the `Up` and `Down`
-arrow keys. Users can trigger a state change by pressing `Space` while the radio
-button input has screen reader focus.
+arrow keys.
 
 For additional information,
 see [screen reader tests](https://www.carbondesignsystem.com/components/radio-button/accessibility#accessibility-testing).
