fix(meetsups): use href

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -39,7 +39,7 @@ along to see other work in progress and learn that way.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (https://ec.yourlearning.ibm.com/w3/meeting/10154096)}>
+  href="https://ec.yourlearning.ibm.com/w3/meeting/10154096">
   Enroll
 </Button>
 
