--- a/src/pages/components/file-uploader/accessibility.mdx
+++ b/src/pages/components/file-uploader/accessibility.mdx
@@ -43,7 +43,7 @@ be updated when these accessibility issues are resolved.
 
 ## Resources
 
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.4.13 Content on Hover or Focus](https://www.ibm.com/able/requirements/requirements/#1_4_13)
     (WCAG Success Criteria
     [1.4.13](https://www.w3.org/WAI/WCAG21/Understanding/content-on-hover-or-focus.html))
