--- a/src/pages/components/notification/accessibility.mdx
+++ b/src/pages/components/notification/accessibility.mdx
@@ -63,7 +63,7 @@ key is used to move focus to the close button within the notification and the
   covers the usage of ARIA names, state and roles.
 - [W3C W3C Web Accessibility Tutorial - User Notifications](https://www.w3.org/WAI/tutorials/forms/notifications/)
   provides a tutorial on notification accessibility.
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [3.3.1 Error Identification](https://www.ibm.com/able/requirements/requirements/#3_3_1)
     (WCAG Success Criteria
     [3.3.1](https://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-identified.html))
