--- a/src/pages/components/radio-button/accessibility.mdx
+++ b/src/pages/components/radio-button/accessibility.mdx
@@ -46,7 +46,7 @@ keyboard focus placing the element in the logical navigation flow.
 - [W3C WAI-ARIA Radio Group Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#radiobutton)
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard intractions.
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [2.4.3 Focus Order](https://www.ibm.com/able/requirements/requirements/#2_4_3)
     (WCAG Success Criteria 2.4.3)
   - [2.4.7 Focus Visible](https://www.ibm.com/able/requirements/requirements/#2_4_7)
