--- a/src/pages/components/search/accessibility.mdx
+++ b/src/pages/components/search/accessibility.mdx
@@ -39,7 +39,7 @@ understand the purpose of the button.
 
 - [W3C WAI-ARIA Landmarks Example](https://www.w3.org/TR/wai-aria-practices/examples/landmarks/search.html)
   covers the usage of ARIA landmarks on a search widget.
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.3.1 Information and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](http://www.w3.org/TR/2016/NOTE-UNDERSTANDING-WCAG20-20161007/content-structure-separation-programmatic.html))
