--- a/src/pages/components/tabs/accessibility.mdx
+++ b/src/pages/components/tabs/accessibility.mdx
@@ -47,7 +47,7 @@ be updated when these accessibility issues are resolved.
 - [W3C WAI-ARIA Tab Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#tabpanel)
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
