--- a/src/pages/guidelines/accessibility/color.mdx
+++ b/src/pages/guidelines/accessibility/color.mdx
@@ -141,7 +141,7 @@ plugin.
 <Column colMd={4} colLg={4} noGutterSm>
 <ResourceCard
     subTitle="IBM Web Accessibility Checklist"
-    href="https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html"
+    href="https://www.ibm.com/able/requirements/requirements/"
      >
 
 ![IBM bee icon](images/bee.svg)
