--- a/src/pages/guidelines/accessibility/overview.mdx
+++ b/src/pages/guidelines/accessibility/overview.mdx
@@ -38,7 +38,7 @@ An accessible product should:
 - Adapt to users and situations
 
 Carbon components follow the
-[IBM Accessibility Checklist](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html)
+[IBM Accessibility Checklist](https://www.ibm.com/able/requirements/requirements/)
 which is based on WCAG AA, Section 508, and European standards. The Carbon team
 strives to write perceivable, operable, and understandable patterns for all
 users—including those employing a screen reader or other assistive technology.
@@ -282,7 +282,7 @@ Functional cognitive disabilities can result in difficulties with:
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Accessibility Checklist"
-    href="https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html"
+    href="https://www.ibm.com/able/requirements/requirements/"
     >
 
 ![IBM bee icon](images/bee.svg)
