--- a/src/pages/components/dropdown/accessibility.mdx
+++ b/src/pages/components/dropdown/accessibility.mdx
@@ -49,7 +49,7 @@ be updated when these accessibility issues are resolved.
 - [W3C WAI-ARIA Authoring Practices Listbox Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#Listbox)
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [2.4.7 Focus Visible](https://www.ibm.com/able/requirements/requirements/#2_4_7)
     (WCAG Success Criteria
     [2.4.7](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-visible.html))
