--- a/src/pages/components/form/accessibility.mdx
+++ b/src/pages/components/form/accessibility.mdx
@@ -59,7 +59,7 @@ content to this component.
 
 - [W3C Web Tutorial: Labeling Controls](https://www.w3.org/WAI/tutorials/forms/labels/).
 - [W3C Web Tutorial: Form Instructions](https://www.w3.org/WAI/tutorials/forms/instructions/).
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
