--- a/src/pages/components/progress-indicator/accessibility.mdx
+++ b/src/pages/components/progress-indicator/accessibility.mdx
@@ -44,7 +44,7 @@ be updated when these accessibility issues are resolved.
 
 - [W3C Web Accessibility Tutorial for Multi-Page Forms](https://www.w3.org/WAI/tutorials/forms/multi-page/)
   provides examples of how to create an accessible progress indicators.
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
