--- a/src/pages/components/structured-list/accessibility.mdx
+++ b/src/pages/components/structured-list/accessibility.mdx
@@ -48,7 +48,7 @@ be updated when these accessibility issues are resolved.
   keyboard interactions.
 - [W3C Tutorial - Table Concepts](https://www.w3.org/WAI/tutorials/tables/)
   covers the usage of various tables, headers, and captions.
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
