--- a/src/pages/components/tag/accessibility.mdx
+++ b/src/pages/components/tag/accessibility.mdx
@@ -50,7 +50,7 @@ content to this component.
 
 #### Helpful resources for creating customized accessible implementations
 
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.4.1 Use of Color](https://www.ibm.com/able/requirements/requirements/#1_4_1)
     (WCAG Success Criteria
     [1.4.1](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color))
