--- a/src/pages/components/text-input/accessibility.mdx
+++ b/src/pages/components/text-input/accessibility.mdx
@@ -48,7 +48,7 @@ optional input, data formats, and other relevant information.
 
 - [W3C Web Tutorial: Labeling Controls](https://www.w3.org/WAI/tutorials/forms/labels/)
 - [W3C Web Tutorial: Form Instructions](https://www.w3.org/WAI/tutorials/forms/instructions/)
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.3.1 Information and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](http://www.w3.org/TR/2016/NOTE-UNDERSTANDING-WCAG20-20161007/content-structure-separation-programmatic.html))
