--- a/src/pages/components/tooltip/accessibility.mdx
+++ b/src/pages/components/tooltip/accessibility.mdx
@@ -57,7 +57,7 @@ be updated when these accessibility issues are resolved.
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
 - [ARIA1: Using the aria-describedby property to provide a descriptive label for user interface controls](https://www.w3.org/WAI/WCAG21/Techniques/aria/ARIA1)
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
   - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
