--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -26,7 +26,7 @@ peers, and getting reviews on work in progress.
 <Column colLg={7} colMd={5}>
 
 <h2>
-  Weekly design playback
+  Carbon and IDL weekly playback
   <span>Fridays, 12pm–1pm Central</span>
 </h2>
 
