Updates to stale URLs that point to the Accessibility Pages (aka IBM.com/able) (#2162)
* Fixing URLs to point to new accessibility requirements checklist

* Changing the name of the Checklist to Requirements also fixing bad links  https://github.ibm.com/IBMa/E2E/issues/2454

* Spacing fix

Co-authored-by: Ali Unwala <aliunwala@ibm.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/code-snippet/accessibility.mdx
+++ b/src/pages/components/code-snippet/accessibility.mdx
@@ -46,11 +46,11 @@ be updated when these accessibility issues are resolved.
 - [W3C WAI-ARIA Authoring Practices Button Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#buttonn)
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
-- [IBM Accessibility Checklist Checkpoint:](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html)
-  - [2.4.7 Focus Visible](https://www.ibm.com/able/guidelines/ci162/focus_visible.html)
+- [IBM Accessibility Requirements:](https://www.ibm.com/able/requirements/requirements/)
+  - [2.4.7 Focus Visible](https://www.ibm.com/able/requirements/requirements/#2_4_7)
     (WCAG Success Criteria
     [2.4.7](https://www.w3.org/WAI/WCAG21/Understanding/focus-visible))
-  - [3.2.2 On Input](https://www.ibm.com/able/guidelines/ci162/on_input.html)
+  - [3.2.2 On Input](https://www.ibm.com/able/requirements/requirements/#3_2_2)
     (WCAG Success Criteria
     [3.2.2](https://www.w3.org/TR/2016/NOTE-UNDERSTANDING-WCAG20-20161007/consistent-behavior-unpredictable-change.html))
 
