--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -58,11 +58,11 @@ content to this component.
 
 - [W3C WAI-ARIA Authoring Practices Breadcrumb Design Pattern](https://www.w3.org/TR/wai-aria-practices/#breadcrumb)
   covers the usage of ARIA names, state and roles.
-- [IBM Accessibility Checklist Checkpoint:](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html)
-  - [2.4.4 Link Purpose (In Context)](https://www.ibm.com/able/guidelines/ci162/link_purpose.html)
+- [IBM Accessibility Requirements:](https://www.ibm.com/able/requirements/requirements/)
+  - [2.4.4 Link Purpose (In Context)](https://www.ibm.com/able/requirements/requirements/#2_4_4)
     (WCAG Success Criteria
     [2.4.4](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-refs.html))
-  - [3.2.3 Consistent Navigation](https://www.ibm.com/able/guidelines/ci162/consistent_navigation.html)
+  - [3.2.3 Consistent Navigation](https://www.ibm.com/able/requirements/requirements/#3_2_3)
     (WCAG Success
     Criteria[3.2.3](https://www.w3.org/TR/UNDERSTANDING-WCAG20/consistent-behavior-consistent-locations.html))
 
