--- a/src/pages/components/text-input/accessibility.mdx
+++ b/src/pages/components/text-input/accessibility.mdx
@@ -48,20 +48,20 @@ optional input, data formats, and other relevant information.
 
 - [W3C Web Tutorial: Labeling Controls](https://www.w3.org/WAI/tutorials/forms/labels/)
 - [W3C Web Tutorial: Form Instructions](https://www.w3.org/WAI/tutorials/forms/instructions/)
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [1.3.1 Information and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
+  - [1.3.1 Information and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](http://www.w3.org/TR/2016/NOTE-UNDERSTANDING-WCAG20-20161007/content-structure-separation-programmatic.html))
-  - [3.3.1 Error Identification](https://www.ibm.com/able/guidelines/ci162/error_id.html)
+  - [3.3.1 Error Identification](https://www.ibm.com/able/requirements/requirements/#3_3_1)
     (WCAG Success Criteria
     [3.3.1](https://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-identified.html))
-  - [3.3.2 Labels and Instructions](https://www.ibm.com/able/guidelines/ci162/labels_or_instructions.html)
+  - [3.3.2 Labels and Instructions](https://www.ibm.com/able/requirements/requirements/#3_3_2)
     (WCAG Success Criteria
     [3.3.2](http://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-cues.html))
-  - [3.3.3 Error Suggestion](https://www.ibm.com/able/guidelines/ci162/error_suggestion.html)
+  - [3.3.3 Error Suggestion](https://www.ibm.com/able/requirements/requirements/#3_3_3)
     (WCAG Success Criteria
     [3.3.3](http://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-suggestions.html))
-  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/guidelines/ci162/name_role_value.html)
+  - [4.1.2 Name, Role, Value](https://www.ibm.com/able/requirements/requirements/#4_1_2)
     (WCAG Success Criteria
     [4.2.1](https://www.w3.org/WAI/WCAG21/Understanding/name-role-value))
 
