--- a/src/pages/components/tooltip/accessibility.mdx
+++ b/src/pages/components/tooltip/accessibility.mdx
@@ -57,14 +57,14 @@ be updated when these accessibility issues are resolved.
   covers the usage of ARIA names, state and roles, as well as the expected
   keyboard interactions.
 - [ARIA1: Using the aria-describedby property to provide a descriptive label for user interface controls](https://www.w3.org/WAI/WCAG21/Techniques/aria/ARIA1)
-- [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
-  - [1.3.1 Info and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
+- [IBM Accessibility Requirements](https://www.ibm.com/able/requirements/requirements/):
+  - [1.3.1 Info and Relationships](https://www.ibm.com/able/requirements/requirements/#1_3_1)
     (WCAG Success Criteria
     [1.3.1](https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships))
-  - [1.4.13 Content on Hover or Focus](https://www.ibm.com/able/guidelines/ci162/content_on_hover_71.html)
+  - [1.4.13 Content on Hover or Focus](https://www.ibm.com/able/requirements/requirements/#1_4_13)
     (WCAG Success Criteria
     [1.4.13](https://www.w3.org/WAI/WCAG21/Understanding/content-on-hover-or-focus.html))
-  - [3.3.2 Labels or Instructions](https://www.ibm.com/able/guidelines/ci162/labels_or_instructions.html)
+  - [3.3.2 Labels or Instructions](https://www.ibm.com/able/requirements/requirements/#3_3_2)
     (WCAG Success Criteria
     [3.3.2](https://www.w3.org/WAI/WCAG21/Understanding/labels-or-instructions))
 
