--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -632,7 +632,7 @@ a text label, but use icon buttons cautiously.
 
 ### Icon-only buttons
 
-Icon buttons allow users to take actions, and make choices, with a single tap. Icon buttons can take the form of a primary, secondary, tertiary or ghost variant but most commonly will be styled as primary or ghost buttons.
+Icon buttons allow users to take actions, and make choices, with a single tap. Icon buttons can take the form of a primary, secondary, tertiary, or ghost variant but most commonly will be styled as primary or ghost buttons.
 
 <Row>
 <Column colLg={8}>
